--- a/CryptoWalletVIPER/CryptoWalletVIPER/Screens/CryptoList/View/CryptoInfoTableViewCell.xib
+++ b/CryptoWalletVIPER/CryptoWalletVIPER/Screens/CryptoList/View/CryptoInfoTableViewCell.xib
@@ -25,57 +25,79 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MkC-CO-hxR">
-                        <rect key="frame" x="72" y="29" width="39.5" height="36.5"/>
+                        <rect key="frame" x="72" y="30" width="39.5" height="34"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7Q-Ef-9Sp">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dm-d1-c97">
                                 <rect key="frame" x="0.0" y="0.0" width="39.5" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dm-d1-c97">
-                                <rect key="frame" x="0.0" y="19.5" width="39.5" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7Q-Ef-9Sp">
+                                <rect key="frame" x="0.0" y="19.5" width="39.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="HDZ-xd-mSg">
-                        <rect key="frame" x="264.5" y="29" width="39.5" height="39"/>
+                        <rect key="frame" x="222.5" y="30" width="35.5" height="34"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0G-BZ-ts8">
-                                <rect key="frame" x="0.0" y="0.0" width="39.5" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <rect key="frame" x="0.0" y="0.0" width="35.5" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dsf-WZ-hBw">
-                                <rect key="frame" x="0.0" y="19.5" width="39.5" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <rect key="frame" x="0.0" y="17" width="35.5" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="PPd-au-SU0">
+                        <rect key="frame" x="277" y="34.5" width="24" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="7Mg-a7-G3N"/>
+                            <constraint firstAttribute="width" constant="24" id="skc-qs-6x9"/>
+                        </constraints>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fa7-41-uU3">
+                        <rect key="frame" x="274" y="32" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="JYe-sx-Fkg"/>
+                            <constraint firstAttribute="height" constant="30" id="gL3-84-ECQ"/>
+                        </constraints>
+                        <connections>
+                            <action selector="favoriteButtonDidTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="OfE-lf-wYQ"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="CWU-VJ-jBf" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="6TP-yp-jZA"/>
                     <constraint firstItem="MkC-CO-hxR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="AM4-OJ-ggS"/>
-                    <constraint firstAttribute="trailing" secondItem="HDZ-xd-mSg" secondAttribute="trailing" constant="16" id="GNO-9P-y4j"/>
+                    <constraint firstItem="Fa7-41-uU3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="DDE-92-2TL"/>
                     <constraint firstItem="MkC-CO-hxR" firstAttribute="leading" secondItem="CWU-VJ-jBf" secondAttribute="trailing" constant="16" id="bBG-Dm-0ZW"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="HDZ-xd-mSg" secondAttribute="bottom" constant="16" id="cSd-mM-6pg"/>
                     <constraint firstItem="HDZ-xd-mSg" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="ddn-4u-Oag"/>
                     <constraint firstItem="HDZ-xd-mSg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="MkC-CO-hxR" secondAttribute="trailing" constant="16" id="eMM-Lg-EYP"/>
                     <constraint firstItem="MkC-CO-hxR" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="hRP-sN-g3Z"/>
                     <constraint firstItem="CWU-VJ-jBf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hub-xj-cHw"/>
+                    <constraint firstItem="PPd-au-SU0" firstAttribute="centerY" secondItem="Fa7-41-uU3" secondAttribute="centerY" id="i32-wi-ZIW"/>
                     <constraint firstItem="HDZ-xd-mSg" firstAttribute="top" secondItem="MkC-CO-hxR" secondAttribute="top" id="mid-hq-4zt"/>
+                    <constraint firstItem="Fa7-41-uU3" firstAttribute="leading" secondItem="HDZ-xd-mSg" secondAttribute="trailing" constant="16" id="uaK-56-kfY"/>
+                    <constraint firstItem="PPd-au-SU0" firstAttribute="centerX" secondItem="Fa7-41-uU3" secondAttribute="centerX" id="uz7-lS-F1S"/>
+                    <constraint firstAttribute="trailing" secondItem="Fa7-41-uU3" secondAttribute="trailing" constant="16" id="yfp-g8-byV"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="baseLabel" destination="7dm-d1-c97" id="QxQ-A5-aV2"/>
                 <outlet property="buyLabel" destination="dsf-WZ-hBw" id="ick-3Q-cFM"/>
+                <outlet property="favoriteImageView" destination="PPd-au-SU0" id="5ry-G7-2D0"/>
                 <outlet property="iconImageView" destination="CWU-VJ-jBf" id="TBE-lr-1Wk"/>
                 <outlet property="nameLabel" destination="N7Q-Ef-9Sp" id="Bfr-F6-Xj3"/>
                 <outlet property="saleLabel" destination="j0G-BZ-ts8" id="qZa-aO-z2L"/>
@@ -83,4 +105,7 @@
             <point key="canvasLocation" x="105.79710144927537" y="141.29464285714286"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="star" catalog="system" width="128" height="116"/>
+    </resources>
 </document>
